View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024713 | Open CASCADE | OCCT:WOK | public | 2014-03-11 17:40 | 2014-11-11 12:51 |
Reporter | kgv | Assigned To | kgv | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.0 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0024713: WOK compilation fails on tcl8.6 | ||||
Description | 1>------ Build started: Project: TKWOKTcl, Configuration: Release Win32 ------ 1>Compiling... 1>WOKTclTools_Interpretor.cxx 1>Information: tcl8.6.lib is using as TCL library 1>..\..\..\src\WOKTclTools\WOKTclTools_Interpretor.cxx(474) : error C2039: 'result' : is not a member of 'Tcl_Interp' 1> g:\occt-3rdparty\occt670products\tcltk-86-32\include\tcl.h(503) : see declaration of 'Tcl_Interp' 1>..\..\..\src\WOKTclTools\WOKTclTools_Interpretor.cxx(491) : error C2039: 'result' : is not a member of 'Tcl_Interp' 1> g:\occt-3rdparty\occt670products\tcltk-86-32\include\tcl.h(503) : see declaration of 'Tcl_Interp' | ||||
Tags | No tags attached. | ||||
Test case number | |||||
related to | 0024316 | closed | Make building with different versions of Tcl easier |
|
Dear bugmaster, please integrate fix in CR24713 branch to the master. |
|
Fix has been compiled successfully together with issue 24533. Problem was detected |
|
Fix has been integrated into master of occt-wok repository |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-03-11 17:40 | kgv | New Issue | |
2014-03-11 17:40 | kgv | Assigned To | => kgv |
2014-03-11 18:38 | kgv | Note Added: 0028201 | |
2014-03-11 18:38 | kgv | Assigned To | kgv => bugmaster |
2014-03-11 18:38 | kgv | Status | new => feedback |
2014-03-11 18:39 | kgv | Relationship added | related to 0024316 |
2014-03-12 14:37 | bugmaster | Note Added: 0028223 | |
2014-03-12 14:37 | bugmaster | Status | feedback => tested |
2014-03-12 14:39 | bugmaster | Note Added: 0028224 | |
2014-03-12 14:39 | bugmaster | Status | tested => verified |
2014-03-12 14:39 | bugmaster | Resolution | open => fixed |
2014-03-12 14:39 | bugmaster | Assigned To | bugmaster => kgv |
2014-04-04 13:31 |
|
Target Version | 6.7.1 => 6.8.0 |
2014-11-11 12:47 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:51 |
|
Status | verified => closed |