0024713: adopt WOK for tcl8.6